fix problem with random white space on right

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -81,11 +81,11 @@
 }
 
 .footer-info {
-    margin-top: 12%;
+    margin-top: 225px;
 }
 
 .mobile.footer-info {
-    margin-top: 35%;
+    margin-top: 150px;
 }
 
 .copyright {
