--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -438,6 +438,8 @@
     }
 }
 
+
+
 .biblya>h1 {
     height: 107px;
     width: 379px;
@@ -476,6 +478,12 @@
     line-height: 131px;
     text-transform: uppercase;
     animation: fadeInLeftTop 1.5s;
+}
+
+@media screen and (max-width: 1200px) {
+    .hero-body .desktop .title {
+        font-size: 6rem;
+    }
 }
 
 .hero-body .desktop .subtitle {
@@ -729,6 +737,12 @@
     position: relative;
     top: 70px;
     margin-bottom: 90px;
+}
+
+@media screen and (max-width: 1200px) {
+    #main .desktop .columns {
+        margin-bottom: 50px;
+    }
 }
 
 .img-align-left {
